# RO-Claude-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  README.md  csk_saas.db  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.csk/: usage.jsonl
.csk/briefings/: 2026-05-11.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/api/: Dockerfile  README.md  pyproject.toml  railway.json
apps/api/csk_api/: __init__.py  billing.py  config.py  crypto.py  db.py  main.py  oauth.py  services.py  worker.py
apps/api/tests/: test_api.py  test_billing.py  test_oauth.py
apps/demo/: README.md  package.json  pyproject.toml
apps/demo/app/: main.py
apps/demo/tests/: test_app.py
apps/docs/: README.md  adrs.mdx  introduction.mdx  mint.json  package.json  production-checklist.mdx  quickstart.mdx
apps/docs/concepts/: agent-patterns.mdx  evals.mdx  hardening.mdx  mcp-servers.mdx  memory.mdx
apps/docs/cookbook/: code-reviewer.mdx  customer-support.mdx
apps/web/: .env.example  README.md  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/signin/: page.tsx
apps/web/lib/: api.ts
docs/: PRODUCTION_LESSONS.md
examples/: README.md
examples/code-reviewer/: README.md  main.py  sample_buggy_code.py
examples/customer-support/: README.md  golden.jsonl  kb.py  main.py
examples/plugins/: README.md  weather.py
examples/research-agent/: README.md  main.py
scripts/: demo.tape  release.sh
scripts/launch_kit/: 01_anthropic_email.md  02_anthropic_dm.md  03_founder_dm.md  04_show_hn_title.txt  05_show_hn_first_comment.md  06_indie_hackers.md  07_tweets.md  08_linkedin.md  09_anthropic_public.md  DAY_BY_DAY_PLAN.md  README.md
