[project]
name = "ro-claude-kit"
version = "0.0.1"
description = "Opinionated reference implementation for shipping production Claude agents in a weekend."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/agent-patterns",
    "packages/eval-suite",
    "packages/memory",
    "packages/mcp-servers",
    "packages/hardening",
]
