[project]
name = "ro-claude-kit-api"
version = "0.0.1"
description = "Hosted SaaS for csk briefings — FastAPI backend with encrypted per-user credential storage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pydantic[email]>=2.5",
    "email-validator>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42.0",
    "apscheduler>=3.10",
    "ro-claude-kit-cli",
    "ro-claude-kit-agent-patterns",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[tool.uv.sources]
ro-claude-kit-cli = { workspace = true }
ro-claude-kit-agent-patterns = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["csk_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
