[project]
name = "ro-claude-kit-demo"
version = "0.0.1"
description = "AgentLab — interactive demo for RO-Claude-kit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "ro-claude-kit-agent-patterns",
    "ro-claude-kit-hardening",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[tool.uv.sources]
ro-claude-kit-agent-patterns = { workspace = true }
ro-claude-kit-hardening = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
